# blo-alerts

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 247709cca960_create_users_and_otp_codes_tables.py
backend/app/core/: auth.py  security.py
backend/app/models/: notice.py  otp.py  user.py
backend/app/routers/: auth.py  notices.py
backend/app/schemas/: auth.py  notice.py
backend/app/services/: media.py  sms.py
