[project]
name = "avisos-municipales-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-decouple>=3.8",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "python-magic>=0.4.27",
    "twilio>=8.0.0",
    "firebase-admin>=6.4.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"